0.5.8 Fix: Scrollbar caused Elements Shaking

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -2,6 +2,10 @@
  * 自定义滚动条样式
  */
 
+.custom-scrollbar {
+    scrollbar-gutter: stable;
+}
+
 .custom-scrollbar::-webkit-scrollbar {
     width: 8px;
 }
